# grace-tensorpotential

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
doc/: README.md
doc/gracemaker/: install.md
docs/: index.md  requirements.txt
docs/gracemaker/: cli.md  faq.md  foundation.md  gen_tensor.md  inputfile.md  install.md  presets.md  quickstart.md  tutorials.md  uq.md  utilities.md
docs/stylesheets/: extra.css
examples/: Foundation_models.ipynb
examples/grace/: input.yaml  visualize_metrics.ipynb
examples/slurm_multinode/: submit.sbatch
tensorpotential/: __init__.py  constants.py  export.py  loss.py  metadata_utils.py  metrics.py  poly.py  tensorpot.py  tpmodel.py  utils.py
tensorpotential/calculator/: __init__.py  asecalculator.py  foundation_models.py  foundations_models.py
tensorpotential/cli/: data.py  distribute.py  gracemaker.py  metrics.py  prepare.py  train.py  train_callbacks.py  wizard.py
tensorpotential/compat/pace/: __init__.py  _version.py  constants.py  fit.py  fitmetrics.py  tensorpot.py
tensorpotential/compat/pace/functions/: __init__.py  radial_functions.py  spherical_harmonics.py
tensorpotential/compat/pace/potentials/: __init__.py  ace.py
tensorpotential/compat/pace/utils/: __init__.py  neighborlist.py  tensorcalc.py  utilities.py
tensorpotential/data/: __init__.py  databuilder.py  dataset_plotter.py  dense_nbr.py  process_df.py  shards.py  streaming.py  symbols.py  tpatoms.py  weighting.py
tensorpotential/extra/: extra_data_builders.py  extra_losses.py  model_computes.py  presets.py
tensorpotential/extra/gen_tensor/: constants.py  databuilder.py  ewald.py  loss.py  metrics.py  model.py  wizard.py
tensorpotential/functions/: couplings.py  lora.py  nn.py  radial.py  spherical_harmonics.py
tensorpotential/instructions/: __init__.py  base.py  compute.py  instruction_graph_utils.py  output.py
tensorpotential/potentials/: __init__.py  presets.py  registry.py
tensorpotential/resources/: input_template.yaml
tensorpotential/scripts/: _kokkos_export.py  df2extxyz.py  extxyz2df.py  grace_collect.py  grace_dashboard.py  grace_models.py  grace_predict.py  grace_preprocess.py  grace_uq.py  grace_utils.py  gracemaker.py
tensorpotential/uq/: __init__.py  artifact_builder.py  compute.py  constants.py  factories.py  feature_extraction.py  gmmuq.py  instructions.py
tensorpotential/uq/cli/: __init__.py  _common.py  diagnostics.py  info.py  predict.py  select.py  strategies.py
tests/: conftest.py  model_grace.yaml  model_grace_2L_omat.yaml  model_grace_2L_omat_large_base.yaml  test_add_loaded_model_param.py  test_bucketing_heuristic.py  test_calculator.py  test_coupling_parity_bug.py  test_databuilder.py  test_dataset_plotter.py  test_dense_nbr.py  test_detect_multigpu_intent.py  test_distrib.py  test_export.py  test_export_to_yaml.yaml  test_fm_shift_auto.py  test_foundation_model_regression.py  test_gen_tensor.py  test_gen_tensor_integration.py  test_gen_tensor_wizard.py  test_grace_utils_export.py  test_graph_split.py  test_instruction_graph_utils.py  test_instructions.py  test_integration_test.py  test_intra_epoch_checkpoint.py  test_is_chief.py  test_linear_matmul_parity.py  test_loss_piecewise_linear.py  test_maxiter_auto.py  test_presets.py  test_process_df.py  test_spbf.py  test_spbf_layout_opt.py  test_streaming_pipeline.py  test_structured_grid.py  test_tp_model.py  test_uq_builder.py  test_uq_cli.py  test_uq_common.py  (+7 more)
tests/Ethanol-LINEAR/: input.yaml
tests/MoNbTaW-CUSTOM/: input.yaml  input_mlp_emb.yaml  model.py  model_mlp_emb.py
tests/MoNbTaW-FS/: input.yaml  input_3fs.yaml  input_hea25.yaml  input_lbfgs.yaml
tests/MoNbTaW-GRACE/: input_1L.yaml  input_1L_bond_cutoff.yaml  input_2L.yaml  input_2L_MP.yaml
tests/MoNbTaW-LINEAR/: input.yaml  input_f32.yaml  input_huber.yaml  input_lbfgs.yaml  input_loss_explosion.yaml  input_lr_cosine_decay.yaml  input_lr_exponential_decay.yaml  input_lr_linear_decay.yaml  input_lr_linear_decay_no_warmup.yaml  input_lr_reduce_on_plateau.yaml  input_lr_reduce_on_plateau_new_api.yaml  input_reg.yaml  input_stress.yaml  input_virial.yaml  input_wei.yaml
tests/MoNbTaW-MLP/: input.yaml
tests/MoNbTaW-TENSOR/: input.yaml
tests/data_distrib/: check_stats.py  compute_distributed_data.sh  input.yaml
tests/test_calculator_model/: fingerprint.pb  metadata.yaml  saved_model.pb
tests/test_calculator_model/variables/: variables.data-00000-of-00001  variables.index
tests/test_model_custom_cutoff/: fingerprint.pb  metadata.yaml  saved_model.pb
tests/test_model_custom_cutoff/variables/: variables.data-00000-of-00001  variables.index
